objects/Social_Benefits_and_Contributions__c.object
<CustomObject><fields>
        <fullName>Comments__c</fullName>
        <description>Optional: capture additional details. E.g. tickets received on 5/6/2017, Sponsorship installment 1 of 2, LIC#</description>
        <inlineHelpText>Optional: capture additional details. E.g. tickets received on 5/6/2017, Sponsorship installment 1 of 2, LIC#</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Contribution_Amount__c</fullName>
        <description>Monetary award from MathWorks. This amount is what is reflected the Social Mission budget expense reports.</description>
        <inlineHelpText>Monetary award from MathWorks. This amount is what is reflected the Social Mission budget expense reports.</inlineHelpText>
        <label>Contribution Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <description>Short description of the benefit OR contribution. E.g. Press Release, Tickets for staff members, Sponsorship payment, giveaways for event, software</description>
        <inlineHelpText>Short description of the benefit OR contribution. E.g. Press Release, Tickets for staff members, Sponsorship payment, giveaways for event, software</inlineHelpText>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>the disount In knid percentage given to MathWorks</description>
        <label>Discount Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Migration_ID__c</fullName>
        <description>for migration purposes</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Social_Action__c</fullName>
        <label>Social Action</label>
        <referenceTo>Social_Action__c</referenceTo>
        <relationshipLabel>Social Benefits and Contributions</relationshipLabel>
        <relationshipName>Social_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Sub_Type__c</fullName>
        <description>Selection dependent on "Type"</description>
        <inlineHelpText>Selection dependent on "Type"</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tickets</fullName>
                </value>
                <value>
                    <fullName>Staff Discount</fullName>
                </value>
                <value>
                    <fullName>Venue Rental</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Tickets_Received__c</fullName>
        <description>If benefit involved tickets (e.g. museums), track the number MathWorks receives. Otherwise, leave blank.  Useful for reporting on admission benefits across all partnerships.</description>
        <inlineHelpText>If benefit involved tickets (e.g. museums), track the number MathWorks receives. Otherwise, leave blank.  Useful for reporting on admission benefits across all partnerships.</inlineHelpText>
        <label>Tickets Received</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tickets_Redeemed__c</fullName>
        <description>Optional: Used to calculate redemption rates. Track the number of passes MathWorks redeemed.  If redemption is not known, track the number of passes distributed. Useful for tracking utilization of benefits.</description>
        <inlineHelpText>Optional: Used to calculate redemption rates. Track the number of passes MathWorks redeemed.  If redemption is not known, track the number of passes distributed. Useful for tracking utilization of benefits.</inlineHelpText>
        <label>Tickets Redeemed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>Type of Benefit MathWorks receives as part of this relationship</description>
        <inlineHelpText>Type of Benefit OR Contribution MathWorks receives as part of this relationship</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monetary Award</fullName>
                </value>
                <value>
                    <fullName>In-Kind</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Software / License Number</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>to track benefits we receive and contributions we make for Social Misison</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Social Benefits and Contributions</label><nameField>
        <displayFormat>SB - {0000000}</displayFormat>
        <label>Benefit ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Social Benefits and Contributions</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>Contribution_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Benefits</fullName>
        <active>true</active>
        <description>What MathWorks receives as part of this relationship.</description>
        <label>Benefits</label>
    </recordTypes><recordTypes>
        <fullName>Contributions</fullName>
        <active>true</active>
        <description>What MathWorks gives as part of this relationship.</description>
        <label>Contributions</label>
    </recordTypes><validationRules>
        <fullName>Require_contribution</fullName>
        <active>true</active>
        <description>require a contribution amount if the type is monetary</description>
        <errorConditionFormula>AND (ISPICKVAL( Type__c, "Monetary Award"), ISBLANK(Contribution_Amount__c))</errorConditionFormula>
        <errorDisplayField>Contribution_Amount__c</errorDisplayField>
        <errorMessage>A contribution amount is required for benefits of type Monetary Award.  Please enter a contribution amount to save this record.</errorMessage>
    </validationRules></CustomObject>